[package]
name = "http_llm_proxy_stream"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.48", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.1"
bytes = "1.11"
async-stream = "0.3.6"
actix-web = "4.12"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4"
env_logger = "0.11"